Fixed invisible links

--- a/home.css
+++ b/home.css
@@ -1,7 +1,7 @@
 * {
     max-width:98%;
-    margin: auto;
-    padding: 2%
+    margin: 2%;
+    /* padding: 2% */
 }
 
 body {
